Ensure notebook doesn't overlap input area

--- a/server/public/stylesheets/global.styl
+++ b/server/public/stylesheets/global.styl
@@ -17,9 +17,6 @@ You should have received a copy of the GNU Affero General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
 
-:root
-  --sidebar-width 60px
-
 #fixedHeader
   background-color yellow
   left 0
